--- a/ExampleCompanyApp.MvcUI/Views/_ViewImports.cshtml
+++ b/ExampleCompanyApp.MvcUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ExampleCompanyApp.MvcUI
-@using ExampleCompanyApp.MvcUI.Models
+@using ExampleCompanyApp.Core.ViewModel
+@using ExampleCompanyApp.Core.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
